--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
       <div style="font-size: 2.5rem; color: #fff; font-weight: bold; font-family: '俐方體11號', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;">製作團隊</div>
     </div>
     <div style="position: absolute; bottom: 60px; left: 50%; transform: translateX(-50%);">
-      <button id="backToHome" onclick="showPage(1)" style="background: rgba(118, 145, 255, 0.5); color: #fff; border: 2px solid #7691FF; border-radius: 24px; padding: 12px 40px; font-size: 1.2rem; cursor: pointer; transition: all 0.2s; font-family: '俐方體11號', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;">回首頁</button>
+     <button id="backToHome" onclick="location.reload()" style="background: rgba(118, 145, 255, 0.5); color: #fff; border: 2px solid #7691FF; border-radius: 24px; padding: 12px 40px; font-size: 1.2rem; cursor: pointer; transition: all 0.2s; font-family: '俐方體11號', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;">回首頁</button>
     </div>
   </div>
 
@@ -844,3 +844,4 @@
   </script>
 </body>
 </html>
+
