--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       padding: 0;
       font-family: '俐方體11號', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       overflow: hidden;
+
+          /* 小遊戲圖片，移除白色邊框與背景 */
+    .game-img {
+      border: none !important;
+      background: none !important;
+      box-shadow: none !important;
+      border-radius: 0 !important;
+      padding: 0 !important;
+      margin: 0 !important;
+      display: block;
+    }
       color: #fff;
       background: #000;
     }
@@ -844,4 +855,5 @@
   </script>
 </body>
 </html>
+
 
